<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.detail.DetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_text"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pengunjung"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pengunjung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_text"
                    android:gravity="center"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_text"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chapter_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/chapter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_text"
                    android:gravity="center"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtPenulis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/penulis"
            app:layout_constraintEnd_toStartOf="@+id/txtRelease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/penulis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            app:layout_constraintEnd_toEndOf="@+id/txtPenulis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPenulis" />

        <TextView
            android:id="@+id/txtRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_release"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPenulis"
            app:layout_constraintTop_toTopOf="@+id/txtPenulis" />

        <TextView
            android:id="@+id/release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPenulis"
            app:layout_constraintTop_toBottomOf="@+id/txtRelease" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            app:layout_constraintEnd_toStartOf="@+id/txtGenre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            app:layout_constraintEnd_toEndOf="@+id/txtStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStatus" />

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtStatus"
            app:layout_constraintTop_toTopOf="@+id/txtStatus" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtStatus"
            app:layout_constraintTop_toBottomOf="@+id/txtGenre" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <TextView
            android:id="@+id/txtDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDeskripsi" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>